rancher/v1.3/ja/faqs/troubleshooting/index.md
* * *

title: Rancher のトラブルシューティングに関する FAQ layout: rancher-default-v1.3 version: v1.3 lang: ja redirect_from: - /rancher/v1.3/en/faqs/ - /rancher/faqs/ - /rancher/faqs/troubleshooting/

* * *

## ## トラブルシューティングに関する FAQ

詳細な FAQ は [Rancher サーバーに関する FAQ]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/faqs/server) と [Rancher エージェント/ホストに関する FAQ ]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/faqs/agents/) を参照してください。

このセクションでは既に Rancher サーバーの起動やホストの追加が正常に完了していることを想定しています。

### サービス/コンテナ

#### なぜコンテナの名前しか編集できないか?

Docker containers are immutable (not changeable) after creation. The only things you can edit are things that we store that aren't really part of the Docker container. This includes restarting, it's still the same container if you stop and start it. You will need to remove and recreate a container to change anything else.

You can **Clone**, which will pre-fill the **Add Container** screen with all the settings from an existing container. If you forget one thing, you can clone the container, change it, and then delete the old container.

#### Rancher 上でコンテナやサービスをリンクするには?

In Docker, linked containers (using `--link` in `docker run`) shows up in the `/etc/hosts` of the container it's linked to. In Rancher, we don't edit the `/etc/hosts`. Instead we run an [internal DNS server]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/cattle/internal-dns-service/) that makes links work across hosts. The DNS server would respond with the correct IP.

<a id="container-access"></a>

#### 助けて! シェルが実行できない、もしくは UI からコンテナのログが見れない。Rancher はどうやってコンテナのシェルやログにアクセスしているのか?

Since the agent is potentially open to the public internet, requests to the agent for a shell (or logs, etc) of a container aren't automatically trusted. The request from Rancher Server includes a JWT (JSON Web Token) and that JWT is signed by the server and can be verified by the agent to have actually come from the server. Part of that includes an expiration time, which is 5 minutes from when it is issued. This prevents a token from being used for long periods of time if it were to be intercepted, which is particularly important if not using SSL.

If you run docker logs -f rancher-agent and the logs show messages about an expired token, then please check that the date/time of the Rancher Server host and Rancher Agent host are in sync.

#### どこからサービスのログを見ることができる?

In the service details, we provide service logs in a tab called **Log**. In the **Log** tab, it lists out all events related to the service including a timestamp and description of the event that occurs in the API. These logs are kept for 24 hours before being deleted.

### ホスト間通信

If containers on different hosts cannot ping each other, there are some common scenarios that could be the issue.

#### ホスト間通信が動作しているかどのように確認するか?

In the **Stacks** -> **Infrastructure Stacks**, check the status of the `healthcheck` stack. If the stack is active, then cross host communication is working.

To manually test, you can exec into any container and ping the internal IP (i.e. 10.42.x.x) of another container. The containers from infrastructure stacks may be hidden on the hosts page. To view them, select the "Show System" checkbox in the upper right corner.

#### ホストの IP は正しく UI に表示されている?

Every so often, the IP of the host will accidentally pick up the docker bridge IP instead of the actual IP. These are typically `172.17.42.1` or starting with `172.17.x.x`. If this is the case, you need to re-register your host with the correct IP by explicitly setting the `CATTLE_AGENT_IP` environment variable in the `docker run` command.

```bash
$ sudo docker run -d -e CATTLE_AGENT_IP=<HOST_IP> --privileged \
    -v /var/run/docker.sock:/var/run/docker.sock \
    rancher/agent:v0.8.2 http://SERVER_IP:8080/v1/scripts/xxxx
```

#### Ubuntu 上のコンテナが他のコンポーネントと通信できない。

If you have `UFW` enabled, you can either disable `UFW` OR change `/etc/default/ufw` to:

    DEFAULT_FORWARD_POLICY="ACCEPT"
    

<a id="subnet"></a>

#### Rancher で利用しているサブネットが既存ネットワークで利用されており、管理ネットワークと重複してしまう。どのようにサブネットを変更するか?

To change the subnet used for networking of containers, you will need to ensure the networking infrastructure service that you want to use has the correct [subnet]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/rancher-services/networking/#subnets) in the `default_network` in the `rancher-compose.yml` file.

To change Rancher's IPsec or VXLAN network driver, you will need to have an [environment template]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/environments/#what-is-an-environment-template) with an updated infrastructure service. When creating a new environment template or editing an existing one, you edit the configuration of the networking infrastructure service by clicking on **Edit Config**. In the edit screen, you can enter a different subnet and click **Configure**. Any **new** environment using the updated environment template would be using the new subnet. Editing an existing environment template will not update the infrastructure services in existing environments.

> **Note:** The previous method of updating the subnet through the API will no longer be applicable as Rancher has moved to infrastructure services.

### DNS

<a id="dns-config"></a>

### DNS が正常にセットアップされている場合どのように参照するか?

If you want to see the configuration of the Rancher DNS setup, go to the **Stacks** -> **Infrastructure**. Find the `network-services` stack and select the `metadata` service. In the `metadata` service, exec into any of the containers named `network-services-metadata-dns-X`. You can use the UI and select **Execute Shell** on the container.

```bash
$ cat /etc/rancher-dns/answers.json
```

#### CentOS

##### なぜコンテナがネットワークに接続できないか?

If you run a container on the host (i.e. `docker run -it ubuntu`) and the container cannot talk to the internet or anything outside the host, then you might have hit a networking issue.

CentOS will by default set `/proc/sys/net/ipv4/ip_forward` to ``, which will essentially bork all networking for Docker. Docker sets this value to `1` but if you run `service restart networking` on CentOS it sets it back to ``.

<a id="lb-config"></a>

### ロードバランサー

#### なぜロードバランサーが `Initializing` のままスタックしてしまうのか?

Load balancers automatically have [health checks]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/cattle/health-checks/) enabled on them. If the load balancer is stuck in `initializing` state, then most likely the [cross host communication](#cross-host-communication) between the hosts is not working.

#### どのようにしてロードバランサーの設定情報を確認するのか?

If you want to see the configuration of the load balancer, you will need to exec into the specific load balancer container and look for the configuration file. You can use the UI and select **Execute Shell** on the container.

```bash
$ cat /etc/haproxy/haproxy.cfg
```

This file will provide all the configuration details of the load balancer.

#### HAProxy のログはどこで確認できるか?

The logs of HAProxy can be found inside the load balancer container. `docker logs` of the load balancer container will only provide details of the service related to load balancer, but not the actual HAProxy logging.

    $ cat /var/log/haproxy
    

### 高可用性

#### Rancher Compose Executor and Go-Machine-Service are continuously restarting.

In an HA set, if rancher-compose-executor and go-machine-service are continuously restarting, if you are behind a proxy, please ensure that proxy protocol is being used.

### 認証

<a id="manually-turn-off-github"></a>

#### 助けて! [アクセスコントロール]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/configuration/access-control/) を有効化したら Rancher にアクセスできなくなった。 アクセスコントロールを無効化するためにどのように Rancher をリセットできるか?

If something goes wrong with your authentication (like your GitHub authentication getting corrupted), then you may be locked out of Rancher. To re-gain access to Rancher, you'll need to turn off Access Control in the database. In order to do so, you'll need access to the machine that is running Rancher Server.

```bash
$ docker exec -it <rancher_server_container_ID> mysql
```

> **Note:** The `<rancher_server_container_ID>` will be the container that has the Rancher database. If you [upgraded]({{site.baseurl}}/rancher/{{page.version}}/{{page.lang}}/upgrading/) and created a Rancher data container, you'll need to use the ID of the Rancher data container instead of the Rancher server container.

cattle データベースにアクセスします。

```bash
mysql> use cattle;
```

`setting` テーブルを確認します。

```bash
mysql> select * from setting;  
```

Update the `api.security.enabled` to `false` and clear the `api.auth.provider.configured` value . This change will turn off access control and anyone can access Rancher server with the UI/API.

```bash
mysql> update setting set value="false" where name="api.security.enabled";
mysql> update setting set value="" where name="api.auth.provider.configured";
```

Confirm the changes have been made in the `setting` table.

```bash
mysql> select * from setting;  
```

It may take ~1 minute before the authentication will be turned off in the UI, but you will be able to refresh the webpage and access Rancher with access control turned off.